<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.nonxedy.nonchat</groupId>
	<artifactId>nonchat</artifactId>
	<version>1.5.8</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<!-- Suffix for development builds (set via -Ddev.build=true) -->
		<dev.build.suffix></dev.build.suffix>
	</properties>

	<repositories>
		<repository>
			<id>papermc-repo</id>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/repository/public/</url>
		</repository>
		<repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
		<repository>
        	<id>jitpack.io</id>
        	<url>https://jitpack.io</url>
    	</repository>
		<repository>
			<id>Scarsz-Nexus</id>
			<url>https://nexus.scarsz.me/content/groups/public/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.21.11-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.luckperms</groupId>
			<artifactId>api</artifactId>
			<version>5.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
    		<groupId>net.kyori</groupId>
    		<artifactId>adventure-text-minimessage</artifactId>
    		<version>4.25.0</version>
    		<scope>provided</scope>
		</dependency>
		<dependency>
    		<groupId>net.kyori</groupId>
    		<artifactId>adventure-text-serializer-legacy</artifactId>
    		<version>4.25.0</version>
    		<scope>provided</scope>
		</dependency>
		<dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>
		<dependency>
        	<groupId>com.github.MilkBowl</groupId>
        	<artifactId>VaultAPI</artifactId>
        	<version>1.7.1</version>
        	<scope>provided</scope>
    	</dependency>
		<dependency>
		    <groupId>org.projectlombok</groupId>
		    <artifactId>lombok</artifactId>
		    <version>1.18.38</version>
		    <scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.discordsrv</groupId>
			<artifactId>discordsrv</artifactId>
			<version>1.28.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.0.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
  			<groupId>org.apache.commons</groupId>
  			<artifactId>commons-lang3</artifactId>
  			<version>3.18.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.ben-manes.caffeine</groupId>
			<artifactId>caffeine</artifactId>
			<version>3.2.3</version>
		</dependency>
	</dependencies>

	<build>
		<finalName>nonchat-${project.version}${dev.build.suffix}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<relocations>
								<relocation>
									<pattern>com.github.benmanes.caffeine</pattern>
									<shadedPattern>com.nonxedy.nonchat.libs.caffeine</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.yaml.snakeyaml</pattern>
									<shadedPattern>com.nonxedy.nonchat.libs.snakeyaml</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.apache.commons.lang3</pattern>
									<shadedPattern>com.nonxedy.nonchat.libs.commonslang3</shadedPattern>
								</relocation>
								<relocation>
									<pattern>org.bstats</pattern>
									<shadedPattern>com.nonxedy.nonchat.libs.bstats</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.0.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>dev</id>
			<properties>
				<dev.build.suffix>-dev</dev.build.suffix>
			</properties>
		</profile>
	</profiles>
</project>
